fixed weird scaling on mobile devices

--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -1,5 +1,5 @@
 .end {
-  position: static;
+  position: relative;
   bottom: 0;
   width: 100%;
   z-index: 100;
