--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -8,8 +8,9 @@
   p {
     text-align: center;
     font-size: 1.2rem;
-    width: 400px;
-    min-width: 400px;
+    width: 60%;
+    max-width: 500px;
+    min-width: 300px;
   }
 
   .portrait {
